--- a/package.json
+++ b/package.json
@@ -10,9 +10,18 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "lodash": "^4.17.21"
+    "baconjs": "^3.0.17",
+    "bluebird": "^3.7.2",
+    "highland": "^2.13.5",
+    "lodash": "^4.17.21",
+    "node-fetch": "^2.6.7"
   },
   "devDependencies": {
-    "@types/lodash": "^4.14.178"
+    "@types/bluebird": "^3.5.37",
+    "@types/lodash": "^4.14.178",
+    "@types/node": "^18.11.9",
+    "@types/node-fetch": "^2.6.2",
+    "ts-node": "^10.9.1",
+    "typescript": "^4.9.3"
   }
 }
